grammar.js
    source_file: $ => optional(seq(
      optional($._terminator),
      sep1($._terminator, $._block_form),
      optional($._terminator)
    )),

    block: $ => seq(
      sep1($._terminator, $._block_form),
      optional($._terminator)
    ),

    _block_form: $ => choice(
      $._expression,
      $.assignment,
      $.open_tuple,
    ),

    _bracket_form: $ => choice(
      $._expression,
      alias($._closed_assignment, $.assignment),
    ),

    assignment: $ => prec.right(PREC.assign, seq(
      choice(
        $._primary_expression,
        $.open_tuple,
        $._operation,
        $.operator,
      ),
      alias('=', $.operator),
      $._block_form,
    )),

    // assignments inside brackets
    _expression: $ => choice(
      $._definition,
      $._statement,
      $._primary_expression,
      $._operation,
      $.compound_assignment_expression,
      $.macrocall_expression,
      $.arrow_function_expression,
      $.juxtaposition_expression,
      $.ternary_expression,
      $.operator,
      $.integer_literal,
      $.float_literal,
    ),

    // Definitions

    module_definition: $ => seq(
      choice('module', 'baremodule'),
      field('name', choice($.identifier, $.interpolation_expression)),
      optional($._terminator),
      optional($.block),
      'end',
    ),

    // TODO: Rename
    type_head: $ => prec(PREC.stmt, choice(
      $._primary_expression,
      $.binary_expression,
      $.where_expression, // struct Foo{T} <: Bar where {T} end
    )),

    abstract_definition: $ => seq(
      'abstract',
      'type',
      $.type_head,
      optional($._terminator),
      'end',
    ),

    primitive_definition: $ => seq(
      'primitive',
      'type',
      $.type_head,
      $.integer_literal,
      optional($._terminator),
      'end',
    ),

    struct_definition: $ => seq(
      optional('mutable'),
      'struct',
      $.type_head,
      optional($._terminator),
      optional($.block),
      'end',
    ),

    typegroup_definition: $ => seq(
      'typegroup',
      optional($._terminator),
      optional($.block),
      'end',
    ),

    signature: $ => prec(PREC.stmt, choice(
      $.identifier, // zero-method definition
      $.var_identifier, // var"..." zero-method definition
      $.call_expression,
      alias($.tuple_expression, $.argument_list), // anonymous function
      $.typed_expression,
      $.where_expression,
    )),

    function_definition: $ => seq(
      'function',
      $.signature,
      optional($._terminator),
      optional($.block),
      'end',
    ),

    macro_definition: $ => seq(
      'macro',
      $.signature,
      optional($._terminator),
      optional($.block),
      'end',
    ),


    // Statements

    return_statement: $ => prec.right(PREC.stmt, seq(
      'return',
      optional($._block_form),
    )),

    const_statement: $ => prec.right(PREC.stmt, seq(
      'const',
      $._block_form,
    )),

    _primary_expression: $ => choice(
      $.identifier,
      $.boolean_literal,
      $.curly_expression, // Only valid in macros
      $.parenthesized_expression,
      $.tuple_expression,
      $._array,
      $._string,
      $.adjoint_expression,
      $.broadcast_call_expression,
      $.call_expression,
      alias($._closed_macrocall_expression, $.macrocall_expression),
      $.parametrized_type_expression,
      $.field_expression,
      $.index_expression,
      $.interpolation_expression,
      $.quote_expression,
      prec(-1, alias('public', $.identifier)), // Julia 1.11: contextual keyword
      prec(-1, alias('primitive', $.identifier)), // contextual: only keyword in `primitive type`
      prec(-1, alias('abstract', $.identifier)),  // contextual: only keyword in `abstract type`
      prec(-1, alias('mutable', $.identifier)),   // contextual: only keyword in `mutable struct`
      alias($._begin_identifier, $.identifier),    // begin as identifier via external scanner (a[begin+1:end])
      alias($._emoji_identifier, $.identifier),    // SMP emoji identifiers via external scanner
    ),

    _array: $ => choice(
      $.comprehension_expression,
      $.matrix_expression,
      $.vector_expression,
    ),

    comprehension_expression: $ => prec(PREC.array, seq(
      '[',
      $._bracket_form,
      optional($._terminator),
      $.for_clause,
      repeat(choice(
        $.for_clause,
        $.if_clause,
      )),
      ']',
    )),

    generator: $ => seq(
      $._bracket_form,
      $.for_clause,
      repeat(choice(
        $.for_clause,
        $.if_clause,
      )),
    ),

    if_clause: $ => seq(
      'if',
      $._expression,
    ),

    for_clause: $ => prec.right(seq(
      'for',
      sep1(',', $.for_binding),
    )),

    for_binding: $ => prec(1, seq(
      optional('outer'),
      choice(
        $.identifier,
        $.tuple_expression,
        $.typed_expression,
        $.interpolation_expression,
      ),
      alias(choice('in', '=', '∈'), $.operator),
      $._expression,
    )),

    matrix_expression: $ => prec(PREC.array, seq(
      '[',
      choice(
        seq(
          $.matrix_row,
          repeat(seq($._terminator, $.matrix_row)),
          optional($._terminator),
        ),
        $._semicolon, // empty ncat: [;], [;;], [;;;], etc.
      ),
      ']',
    )),

    matrix_row: $ => repeat1(prec(PREC.array, $._bracket_form)),

    vector_expression: $ => choice(
      // Vector with parameters: comma-separated elements, then ; params
      // [a, b; c] → vect(a, b, parameters(c))
      // [a, b; c; d] → vect(a, b, parameters(c, d))
      // Requires at least one comma before first ; (otherwise it's vcat/matrix).
      // Used by JuMP: @variable(model, x[i=1:3, j=1:3; isodd(i); iseven(j)])
      seq(
        '[',
        $._bracket_form,
        repeat1(seq(',', $._bracket_form)),
        repeat1(seq($._semicolon, sep(',', $._bracket_form))),
        ']',
      ),
      // Regular vector: comma-separated
      seq(
        '[',
        sep(',', $._bracket_form),
        optional(','),
        ']',
      ),
    ),

    parenthesized_expression: $ => prec.dynamic(1, parenthesize(
      sep1($._semicolon, choice(
        $._bracket_form,
        $.generator,
      )),
      optional($._semicolon),
    )),

    tuple_expression: $ => parenthesize(
      optional($._semicolon),
      sep(choice(',', $._semicolon), choice(
        $._bracket_form,
        $.generator,
      )),
      optional(choice(',', $._semicolon)),
    ),

    curly_expression: $ => choice(
      seq(
        '{',
        sep(',', $._bracket_form),
        optional(','),
        '}',
      ),
      // bracescat: space/semicolon-separated {x y}, {a ;; b}
      prec(PREC.array, seq(
        '{',
        choice(
          seq(
            $.matrix_row,
            repeat(seq($._terminator, $.matrix_row)),
            optional($._terminator),
          ),
          $._semicolon,
        ),
        '}',
      )),
    ),

    field_expression: $ => prec(PREC.dot, seq(
      field('value', $._primary_expression),
      token.immediate('.'),
      choice(
        $.identifier,
        alias($._emoji_identifier, $.identifier), // sys.😄
        $.interpolation_expression,
        $.quote_expression,
        $._string,
        alias('?', $.identifier), // x.? (getproperty with ?)
      ),
    )),

    index_expression: $ => seq(
      $._primary_expression,
      $._immediate_bracket,
      $._array,
    ),

    parametrized_type_expression: $ => seq(
      $._primary_expression,
      $._immediate_brace,
      $.curly_expression,
    ),

    call_expression: $ => seq(
      choice($._primary_expression, $.operator),
      $._immediate_paren,
      alias($.tuple_expression, $.argument_list),
      optional($.do_clause),
    ),

    _operation: $ => choice(
      $.unary_expression,
      $.binary_expression,
      $.range_expression,
      $.splat_expression,
      $.typed_expression,
      $.unary_typed_expression,
      $.where_expression,
    ),

    binary_expression: $ => {
      const table = [
        // ~ has same precedence as = in Julia (both 1), but must be above
        // PREC.array (-1) so that [0 ~ expr, ...] parses as vector with
        // binary ~ elements rather than matrix with unary ~ elements.
        // Uses external scanner _binary_tilde for whitespace sensitivity:
        // `a ~ b` and `a~b` are binary, `a ~b` is unary (Julia's rule).
        [prec.right, 0, $._binary_tilde],
        [prec.right, PREC.pair, $._pair_operator],
        [prec.right, PREC.arrow, $._arrow_operator],
        [prec.left, PREC.lazy_or, $._lazy_or_operator],
        [prec.left, PREC.lazy_and, $._lazy_and_operator],
        [prec.left, PREC.comparison, choice('in', 'isa', $._comparison_operator, $._type_order_operator)],
        [prec.right, PREC.pipe_left, $._pipe_left_operator],
        [prec.left, PREC.pipe_right, $._pipe_right_operator],
        [prec.left, PREC.colon, $._ellipsis_operator],
        [prec.left, PREC.plus, choice($._unary_plus_operator, $._plus_operator)],
        [prec.left, PREC.times, $._times_operator],
        [prec.left, PREC.rational, $._rational_operator],
        [prec.left, PREC.bitshift, $._bitshift_operator],
        [prec.left, PREC.power, $._power_operator],
      ];

      return choice(...table.map(([fn, prec, op]) => fn(prec, seq(
        $._expression,
        alias(op, $.operator),
        $._expression,
      ))));
    },

    splat_expression: $ => prec(PREC.colon, seq($._expression, '...')),

    typed_expression: $ => prec(PREC.decl, seq(
      $._expression,
      '::',
      $._primary_expression,
    )),

    unary_typed_expression: $ => prec.right(PREC.prefix, seq(
      '::',
      $._primary_expression,
    )),

    where_expression: $ => prec.left(PREC.where, seq(
      $._expression,
      'where',
      $._expression,
    )),


    // Tokens

    _word_identifier: _ => {
      const nonIdentifierCharacters = [
        '#',
        '$',
        ',',
        ':',
        ';',
        '@',
        '~',
        '(', ')',
        '{', '}',
        ...Object.values(OPERATORS),
      ].join(' ')
        .trim()
        .replace(/!/g, '')
        .replace(/-/g, '')
        .replace(/\\/g, '\\\\')
        .replace(/\s+/g, '');

      // Sm (Math Symbol) characters valid as identifier start in Julia.
      // From jl_id_start_char() in julia_extensions.c.
      const validSmSymbols = [
        '°',
        '∀-∇',       // U+2200-U+2207
        '∎-∑',       // U+220E-U+2211
        '∞-∟',       // U+221E-U+221F
        '∫-∳',       // U+222B-U+2233
        '⅀-⅄',       // U+2140-U+2144
        '∿',         // U+223F
        '⊤-⊥',       // U+22A4-U+22A5
        '⊾-⊿',       // U+22BE-U+22BF
        '⋀-⋃',       // U+22C0-U+22C3
        '◸-◿',       // U+25F8-U+25FF
        '∠-∢',       // U+2220-U+2222
        '♯',         // U+266F
        '℘',         // U+2118
        '℮',         // U+212E
      ].join('');

      // So (Other Symbol) ranges safe for identifiers.
      // Only BMP ranges — SMP emoji (U+1F000+) needs external scanner
      // because JS RegExp without 'u' flag can't handle supplementary plane.
      // BMP So ranges: selective Misc Technical + Misc Symbols + Dingbats.
      // Full U+2300-U+23FF breaks token.immediate(KEYWORDS) for :where/:in.
      // U+2310-U+231B covers ⌐ through ⌛ (hourglass) safely.
      const soSymbols = '\\u2310-\\u231B\\u2600-\\u266E\\u2670-\\u27BF';

      // Sc (Currency Symbol) covers €, £, ¥, ₹, ₿, etc.
      // Exclude $ (U+0024) from Sc — it's the interpolation operator, not an identifier.
      const start = `[_\\p{XID_Start}\\p{Sc}${soSymbols}${validSmSymbols}&&[^0-9#*$]]`;
      const rest = `[^"'\`\\s\\.\\-\\[\\]${nonIdentifierCharacters}]*`;
      return new RegExp(start + rest);
    },

    identifier: $ => $._word_identifier,

    // Literals

    integer_literal: _ => choice(
      token(seq('0b', numeral('01'))),
      token(seq('0o', numeral('0-7'))),
      token(seq('0x', numeral('0-9a-fA-F'))),
      numeral('0-9'),
    ),

    _string: $ => choice(
      $.character_literal,
      $.string_literal,
      $.command_literal,
      $.prefixed_string_literal,
      $.prefixed_command_literal,
    ),

    _delimiter_str_1: _ => '"',
    _delimiter_str_3: _ => '"""',
    prefixed_string_literal: $ => prec.left(seq(
      field('prefix', $.identifier),
      $._immediate_string_start,
      choice(
        seq(
          $._delimiter_str_1,
          repeat(choice(alias($._content_str_1_raw, $.content), $.escape_sequence)),
          $._end_str,
        ),
        seq(
          $._delimiter_str_3,
          repeat(choice(alias($._content_str_3_raw, $.content), $.escape_sequence)),
          $._end_str,
        ),
      ),
      optional(field('suffix', $._string_macro_suffix)),
    )),

    _string_macro_suffix: $ => choice(
      $.identifier,
      alias(KEYWORDS, $.identifier),
      $.integer_literal,
      $.float_literal,
    ),

    operator: $ => choice(
      // NOTE: Syntactic operators (&&, +=, etc) cannot be used as identifiers.
      $._pair_operator,
      $._arrow_operator,
      $._comparison_operator,
      $._pipe_left_operator,
      $._pipe_right_operator,
      $._ellipsis_operator,
      ':',
      $._plus_operator,
      $._times_operator,
      $._rational_operator,
      $._bitshift_operator,
      $._power_operator,
      $._tilde_operator,
      $._type_order_operator,
      $._unary_operator,
      $._unary_plus_operator,
    ),

    _pair_operator: _ => addDot('=>'),

    _arrow_operator: _ => addDot(OPERATORS.arrow),

    _lazy_or_operator: _ => addDot('||'),

    _lazy_and_operator: _ => addDot('&&'),

    _comparison_operator: _ => addDot(OPERATORS.comparison),

    _pipe_right_operator: _ => addDot('|>'),

    _pipe_left_operator: _ => addDot('<|'),

    _ellipsis_operator: _ => token(choice('..', addDot(OPERATORS.ellipsis))),

    _plus_operator: _ => addDot(OPERATORS.plus),

    _times_operator: _ => addDot(OPERATORS.times),

    _rational_operator: _ => addDot('//'),

    _bitshift_operator: _ => addDot(OPERATORS.bitshift),

    _power_operator: _ => addDot(OPERATORS.power),


    _tilde_operator: _ => addDot('~'), // unary or assignment

    _type_order_operator: _ => addDot('<: >:'), // unary or comparison

    _unary_operator: _ => addDot(OPERATORS.unary),

    _unary_plus_operator: _ => addDot(OPERATORS.unary_plus),


    _semicolon: _ => seq(';', repeat(token.immediate(';'))),

    _terminator: $ => choice(/\r?\n/, $._semicolon),

    line_comment: _ => seq(/#/, /.*/),
  },
});

/**
 *
 * @param {RuleOrLiteral} separator
 * @param {RuleOrLiteral} rule
 */
function sep(separator, rule) {
  return optional(sep1(separator, rule));
}

/**
 *
 * @param {RuleOrLiteral} separator
 * @param {RuleOrLiteral} rule
 */
function sep1(separator, rule) {
  return seq(rule, repeat(seq(separator, rule)));
}

/**
 *
 * @param {string} operatorString
 */
function addDot(operatorString) {
  const operators = operatorString.trim().split(/\s+/);
  const op = operators.length > 1 ? choice(...operators) : operators[0];
  return token(seq(optional('.'), op, OPERATOR_SUFFIX));
}

/**
 * @param {string} range
 */
function numeral(range) {
  return RegExp(`[${range}]([${range}]|_[${range}])*`);
}

/**
 *
 * @param {...any} rules
 */
function parenthesize(...rules) {
  return seq('(', ...rules, ')');
}
